# TrabalhoDeCompiladores

./: .gitignore  CMakeLists.txt  README.md  ast.h  code_generator.c  code_generator.h  compilar.sh  compile.sh  compiler  explain.txt  lex.yy.c  parser.output  parser.tab.c  parser.tab.h
data/: input-2.esp  input.txt
exemplos/: exemplo1.txt  exemplo2.txt  exemplo3.txt
exemplos/wokwi_diagrams/: diagram1.json  diagram2.json  diagram3.json
output/: exemplo1.cpp  exemplo2.cpp  exemplo3.cpp
src/: Makefile  ast.h  ast.hpp  ast_printer.cpp  ast_printer.hpp  code_generator.cpp  code_generator.hpp  lex.yy.cc  lexer.cpp  lexer.h  lexer.hpp  lexer.l  main.cpp  output.cpp  parser.cpp  parser.hpp  parser.y  symbol_table.cpp  symbol_table.hpp  token.hpp  translator.cpp  translator.h
src/examples/: exemplo1.txt  exemplo2.txt  exemplo3.txt
src/flex_bison/: lexer.l  parser.y
src/lib_compiler/: ast.h  symbol_table.c  symbol_table.h
